docs-archive/apache-airflow-providers-neo4j/3.9.2/_sources/_api/airflow/providers/neo4j/operators/neo4j/index.rst.txt
airflow.providers.neo4j.operators.neo4j
=======================================

.. py:module:: airflow.providers.neo4j.operators.neo4j


Classes
-------

.. autoapisummary::

   airflow.providers.neo4j.operators.neo4j.Neo4jOperator


Module Contents
---------------

.. py:class:: Neo4jOperator(*, sql, neo4j_conn_id = 'neo4j_default', parameters = None, **kwargs)

   Bases: :py:obj:`airflow.providers.neo4j.version_compat.BaseOperator`


   Executes sql code in a specific Neo4j database.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:Neo4jOperator`

   :param sql: the sql code to be executed. Can receive a str representing a
       sql statement
   :param neo4j_conn_id: Reference to :ref:`Neo4j connection id <howto/connection:neo4j>`.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('sql',)



   .. py:attribute:: neo4j_conn_id
      :value: 'neo4j_default'



   .. py:attribute:: sql


   .. py:attribute:: parameters
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



